# appblendbarokc

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  RESUME.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/migrations/: 0001_init.sql  0002_operator_auth_and_idempotency.sql  0003_squarespace_sync_outbox.sql  0004_squarespace_webhooks.sql  0005_scent_formulas.sql  0006_ingredient_types.sql
api/src/: auth.rs  db.rs  error.rs  main.rs  sync.rs
api/src/models/: customer.rs  ingredient.rs  mix.rs  mod.rs  order.rs  scent.rs  sync.rs  webhook.rs
api/src/routes/: customers.rs  ingredients.rs  intake.rs  mixes.rs  mod.rs  orders.rs  scents.rs  sync.rs  webhooks.rs
api/src/squarespace/: http.rs  mock.rs  mod.rs
web/: Dockerfile  index.html  package.json  smoke.js  vite.config.js
web/src/: App.vue  main.js  router.js  styles.css
web/src/components/: CatalogManager.vue  MixBuilder.vue  ScentManager.vue
web/src/lib/: api.js  bottle.js
web/src/views/: AdminView.vue  IntakeView.vue  LookupView.vue  PairDevice.vue
